sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: not found: value temps
    temps = getValue(i)
    ^AlgInsertionSort:8: error: reassignment to val
    j = i
      ^AlgInsertionSort:9: error: not found: value x
    while( j > 0 & getValue(j - 1) > x){
                                     ^AlgInsertionSort:11: error: reassignment to val
      j = j - 1
        ^